--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<link rel="stylesheet" href="/umi.96f7b7eb.css">
+<link rel="stylesheet" href="./umi.96f7b7eb.css">
 </head>
 <body>
 <div id="root"></div>
-<script src="/umi.0607a790.js"></script>
+<script src="./umi.2ef01a0d.js"></script>
 
 </body></html>
